--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Five Night's At Grace's</title>
+		<title>Five Nights At Grace's</title>
 		<meta charset="UTF-8">
 		<meta name="description" content="GRACE IS TRYING TO EAT ME HELP11!1!!!">
 		<meta name="keywords" content="fnag">
